; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_replace.c_list_replace_refs.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_replace.c_list_replace_refs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.show_data = type { i8*, i32 }

@.str = private unnamed_addr constant [2 x i8] c"*\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"short\00", align 1
@REPLACE_FORMAT_SHORT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"medium\00", align 1
@REPLACE_FORMAT_MEDIUM = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"long\00", align 1
@REPLACE_FORMAT_LONG = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [75 x i8] c"invalid replace format '%s'\0Avalid formats are 'short', 'medium' and 'long'\00", align 1
@the_repository = common dso_local global i32 0, align 4
@show_reference = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @list_replace_refs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @list_replace_refs(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.show_data, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  br label %10

10:                                               ; preds = %9, %2
  %11 = load i8*, i8** %4, align 8
  %12 = getelementptr inbounds %struct.show_data, %struct.show_data* %6, i32 0, i32 0
  store i8* %11, i8** %12, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %24, label %15

15:                                               ; preds = %10
  %16 = load i8*, i8** %5, align 8
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %15
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @strcmp(i8* %21, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %20, %15, %10
  %25 = load i32, i32* @REPLACE_FORMAT_SHORT, align 4
  %26 = getelementptr inbounds %struct.show_data, %struct.show_data* %6, i32 0, i32 1
  store i32 %25, i32* %26, align 8
  br label %47

27:                                               ; preds = %20
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @strcmp(i8* %28, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %34, label %31

31:                                               ; preds = %27
  %32 = load i32, i32* @REPLACE_FORMAT_MEDIUM, align 4
  %33 = getelementptr inbounds %struct.show_data, %struct.show_data* %6, i32 0, i32 1
  store i32 %32, i32* %33, align 8
  br label %46

34:                                               ; preds = %27
  %35 = load i8*, i8** %5, align 8
  %36 = call i32 @strcmp(i8* %35, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %41, label %38

38:                                               ; preds = %34
  %39 = load i32, i32* @REPLACE_FORMAT_LONG, align 4
  %40 = getelementptr inbounds %struct.show_data, %struct.show_data* %6, i32 0, i32 1
  store i32 %39, i32* %40, align 8
  br label %45

41:                                               ; preds = %34
  %42 = call i32 @_(i8* getelementptr inbounds ([75 x i8], [75 x i8]* @.str.4, i64 0, i64 0))
  %43 = load i8*, i8** %5, align 8
  %44 = call i32 @error(i32 %42, i8* %43)
  store i32 %44, i32* %3, align 4
  br label %52

45:                                               ; preds = %38
  br label %46

46:                                               ; preds = %45, %31
  br label %47

47:                                               ; preds = %46, %24
  %48 = load i32, i32* @the_repository, align 4
  %49 = load i32, i32* @show_reference, align 4
  %50 = bitcast %struct.show_data* %6 to i8*
  %51 = call i32 @for_each_replace_ref(i32 %48, i32 %49, i8* %50)
  store i32 0, i32* %3, align 4
  br label %52

52:                                               ; preds = %47, %41
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @error(i32, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @for_each_replace_ref(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
